--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>School Rankings</title>
   <base href="/">
    <!-- Bootstrap CSS -->
+   
    <link rel="stylesheet" href="/assets/css/bootstrap.css">
    <link rel="stylesheet" href="/assets/vendors/linericon/style.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -14,6 +15,7 @@
    <link rel="stylesheet" href="/assets/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css">
    <link rel="stylesheet" href="/assets/vendors/nice-select/css/nice-select.css">
    <link rel="stylesheet" href="/assets/vendors/owl-carousel/owl.carousel.min.css">
+   <link rel="stylesheet" href="/assets/css/coreui.min.css">
    <!-- main css -->
    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800' rel='stylesheet' type='text/css'>
    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">    
@@ -23,6 +25,8 @@
    <link rel="stylesheet" href="/assets/css/responsive.css">
    <link rel="stylesheet" href="/assets/css/global.css">
    <link rel="stylesheet" href="/assets/css/education-graduate-directory-page.css">
+   
+  
   
    <!-- Angular Material css -->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
